--- a/src/GridLayout/index.css
+++ b/src/GridLayout/index.css
@@ -17,4 +17,7 @@
 ::slotted(*) {
     /* avoid: dangerous */
 	grid-area: span var(--height, 1) / span var(--width, 1);
+
+	min-height: 0;
+	min-width: 0;
 }
